force-app/main/default/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <description>Se registran errors generados en código y el historial de sincronización con Navision</description>
    <label>Log</label>
    <nameField>
        <label>Nombre de Log</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>