force-app/main/default/objects/Log__c/fields/Enviado_a_Navision__c.field-meta.xml
<CustomField>
    <fullName>Enviado_a_Navision__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se marcará cuando se haya enviado el log a Navision para no enviar nunca el mismo log dos veces.</description>
    <label>Enviado a Navision</label>
    <type>Checkbox</type>
</CustomField>