force-app/main/default/objects/Log__c/fields/Id_NAV__c.field-meta.xml
<CustomField>
    <fullName>Id_NAV__c</fullName>
    <label>Id NAV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>