force-app/main/default/objects/Log__c/fields/Id_NewSales__c.field-meta.xml
<CustomField>
    <fullName>Id_NewSales__c</fullName>
    <description>Identificadores enviados desde NewSales</description>
    <label>Id_NewSales</label>
    <type>TextArea</type>
</CustomField>