force-app/main/default/objects/Log__c/fields/Id_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Id_Salesforce__c</fullName>
    <label>Id Salesforce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>