force-app/main/default/objects/Log__c/fields/Objeto__c.field-meta.xml
<CustomField>
    <fullName>Objeto__c</fullName>
    <label>Objeto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Contrato</fullName>
            </value>
            <value>
                <fullName>Elemento de servicio</fullName>
            </value>
            <value>
                <fullName>Tarifa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>