force-app/main/default/objects/Log__c/recordTypes/Sync.recordType-meta.xml
<RecordType>
    <fullName>Sync</fullName>
    <active>true</active>
    <description>Log de sincronización usado para comunicar a NAV los resultados correctos o erróneos de la sincronización</description>
    <label>Sync</label>
</RecordType>