force-app/main/default/objects/Log__c/listViews/Errores.listView-meta.xml
<ListView>
    <fullName>Errores</fullName>
    <columns>NAME</columns>
    <columns>Metodo__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Id_Salesforce__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Error__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Errores</label>
</ListView>