force-app/main/default/objects/Log__c/listViews/Tots.listView-meta.xml
<ListView>
    <fullName>Tots</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Id_NAV__c</columns>
    <columns>Id_Salesforce__c</columns>
    <columns>Objeto__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Error__c</columns>
    <columns>Metodo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Alejandro Gonzalez</value>
    </filters>
    <label>Tots</label>
</ListView>